# ytcap

./: .gitignore  CHANGELOG.md  CLI_REFERENCE.md  CONTRIBUTING.md  LICENSE.md  OUTPUT_FORMAT.md  README.md  RELEASE.md  SECURITY.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/ytcap/: __init__.py  __main__.py  cli.py  errors.py  logging_config.py
src/ytcap/app/: __init__.py  existing_outputs.py  export_subtitles.py  process_batch.py  process_channel.py  process_playlist.py  process_video.py
src/ytcap/commands/: batch.py  channel.py  common.py  export.py  inspect.py  playlist.py  verify.py  video.py
src/ytcap/exporters/: __init__.py  failed_writer.py  json_writer.py  jsonl_writer.py  output_paths.py  sentence_artifact.py
src/ytcap/models/: __init__.py  export_enrichment.py  subtitle.py  video_metadata.py
src/ytcap/services/: __init__.py  batch_parser.py  metadata_reader.py  sentence_boundaries.py  sentence_timing.py  subtitle_format.py  subtitle_language.py  subtitle_parser.py  subtitle_segmenter.py  subtitle_selector.py  text_normalizer.py  ytdlp_adapter.py
tests/: __init__.py
tests/fixtures/: batch_sample.txt  malformed.srt  malformed.vtt  midcue001.en.manual.srt  sample.en.srt  sample.en.vtt  sample.info.json  techtalk01.en.manual.srt
tests/fixtures/sentence_contract/normalized/: fixture001.en.sentence.jsonl  fixture001.en.sentence.manifest.json
tests/fixtures/sentence_contract/subtitles/: fixture001.en.manual.srt
tests/fixtures/sentence_contract/videos/: fixture001.info.json
tests/unit/: __init__.py  test_batch_parser.py  test_cli.py  test_export_enrichment.py  test_export_subtitles.py  test_jsonl_writer.py  test_metadata_reader.py  test_output_paths.py  test_package.py  test_process_batch.py  test_process_channel.py  test_process_playlist.py  test_project_metadata.py  test_sentence_artifact.py  test_sentence_boundaries.py  test_sentence_timing.py  test_subtitle_format.py  test_subtitle_parser.py  test_subtitle_segmenter.py  test_subtitle_selector.py  test_text_normalizer.py  test_video_metadata.py  test_ytdlp_adapter.py
