[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ytcap"
dynamic = ["version"]
description = "Extract YouTube metadata and subtitles into JSON and JSONL outputs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
  {name = "Özkan Öztürk"}
]
keywords = ["youtube", "subtitles", "metadata", "jsonl", "yt-dlp"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Text Processing",
]
dependencies = [
  "yt-dlp>=2026.06.09",
]

[project.optional-dependencies]
dev = [
  "build",
  "twine",
]

[project.urls]
Homepage = "https://github.com/ozkozturk/ytcap"
Documentation = "https://github.com/ozkozturk/ytcap#readme"

[project.scripts]
ytcap = "ytcap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "ytcap.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
